deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mealie
  namespace: apps
  labels:
    app: mealie
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: hkotel/mealie:v2.3.0
        resources:
          #requests:
          #  cpu: 500m
          #  memory: 768Mi
          limits:
            cpu: 700m
            memory: 1.5Gi
        volumeMounts:
          - name: mealie-data
            mountPath: /app/data
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-pvc
