service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: apps
spec:
  selector:
    app: mealie
  ports:
  - name: http
    targetPort: 9000
    port: 9000
