ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: apps
  annotations: 
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: 10.10.100.30
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.mastersdomain.net`)
      kind: Rule
      services:
        - name: mealie
          port: 9000
      #middlewares:
      #  - name: default-headers
  #tls:
  #  secretName: letsencrypt-production
